jerry-core/parser/js/new-parser/tests/js/lexer/number-invalid-exponent.js.expected

--- Script parsing start ---


--- Script parsing end ---

Parse error 'Missing exponent part.' at line: 3 col: 1
