jerry-core/parser/js/new-parser/tests/js/lexer/number-invalid-exponent.js
/* This test contains number literal parser tests. */

0e+
